# NIS1336-DailyTaskManagement

./: CMakeLists.txt  CMakePresets.json  README.md
data/: Alice_tasks.txt  Nina_tasks.txt  Sylvia_tasks.txt  ljq_tasks.txt  users.txt
include/: Task.h  TaskManager.h  User.h  UserManager.h
src/: CMakeLists.txt  Task.cpp  TaskManager.cpp  User.cpp  UserManager.cpp  main.cpp
